--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,12 +31,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: unzip
+        shell: sh
+        run: gunzip site/htdocs/*.gz
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: './site/htdocs/'
       - name: Deploy to GitHub Pages
         id: deployment
